# SK-AI

./: README.md  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yourcompany/skaI/: MainActivity.kt
app/src/main/java/com/yourcompany/skaI/network/: HuggingFaceService.kt
app/src/main/java/com/yourcompany/skaI/settings/: SettingsManager.kt
app/src/main/java/com/yourcompany/skaI/ui/theme/: Color.kt  Type.kt
cpp/: CMakeLists.txt
cpp/src/main/cpp/: native-lib.cpp
